// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`batch research prompt > is byte-for-byte stable across the gather/plan refactor 1`] = `
"Date: 2026-03-15
### NICHE: physiotherapy

### CONTENT PILLARS & DISTRIBUTION:
Content pillars with weighted distribution:
- "Education" (60%): generate 1 topic(s)
- "Promotion" (40%): generate 2 topic(s)

### EXCLUSION LIST:

RECENTLY COVERED TOPICS (do NOT suggest these or closely related themes — find fresh angles the client has NOT posted about yet):
- A post about shin splints

DO NOT use these source URLs — already used in previous posts:
- https://example.com/already-used


### SOURCE MATERIAL (use for grounding):
RSS_FEED:
<rss_content>
- [Education] Runners are skipping warm-ups: A study of 400 amateur runners. (https://example.com/warmups)
</rss_content>
WEBSITE_DATA:
<website_content>
[URL: https://acme.test/services]
Our 12-week knee rehab programme.
</website_content>
INTERNAL_DOCUMENTS:
<document_content>
[File: services-2026.pdf]
Pricing and treatment list.
</document_content>
WEB_SEARCH_RESULTS:
<web_search_content>
- New guidance on ACL recovery: Timelines vary more than expected. (https://example.com/acl)
</web_search_content>
TOP_PERFORMING_RECENT_POSTS:
<performance_content>
This client's best recent posts — angles their audience has PROVEN to respond to. Propose FOLLOW-UP angles (a deeper dive, the next step, the question the post raised). Never repeat the same content.
- [Education] "Our most-saved post" — 210 likes, 40 saves
</performance_content>

### SOURCING RULES:
- Every topic MUST be grounded in the provided source material. Never use your own knowledge.
- If a source item has a pillar tag in brackets (e.g. [Pillar A, Pillar B]), only use it for the named pillars. Untagged items are available to all pillars.
- RSS items → source_type "rss", source_url = item link.
- Website pages → source_type "website", source_url = page URL.
- Documents → source_type "file", source_url = null.
- Web search → source_type "web_search", source_url = result URL.
- Top performing posts → source_type "performance", source_url = the post's permalink or null.
- Prefer source items tied to seasonal moments, holidays, or occasions relevant to this niche and the English market in the next 4-6 weeks — but ONLY when the source material itself supports the topic; never invent seasonal content without a source.
- If a pillar has no available source items, omit that pillar entirely — do NOT fabricate.
- Never return a topic with source_url null unless source_type is "file" or "performance".
- Maximize source diversity: use each available source URL at least once before reusing any URL for a second topic. Each topic from the same URL must cover a genuinely different angle.
- source_excerpt MUST only contain information that is explicitly present in the source material. Do NOT add facts, mechanisms, claims, or details from your own knowledge — even if they are technically correct. If the source doesn't mention something, it must not appear in the excerpt.

### TASK: Identify up to 3 unique post themes. Return only topics grounded in the provided source material — fewer than 3 is acceptable if sources don't fully cover all pillars.
[{
  "finding": "one sentence: why this theme, what specific fact justifies it",
  "suggested_theme": "5-10 words summary about the theme in English, use proper grammer",
  "pillar": "pillar name",
  "source_url": "url or null",
  "source_title": "title or null",
  "source_type": "rss | website | file | web_search | performance | null",
  "source_excerpt": "Write in English. 5-8 sentences extracting the key facts from the source. Each sentence must correspond to a specific passage in the source — do not infer, interpret, or connect facts that the source does not explicitly connect. Include only facts, claims, and details that are explicitly stated — do NOT add information from your own knowledge, even if technically correct. For technical or medical terms, use the established term in English. If no established term exists, keep the original English term — do NOT create hybrid transliterations mixing Latin and Cyrillic characters. Replace all double-quotes with single-quotes."
}]"
`;

exports[`batch research prompt > is byte-for-byte stable with no source context 1`] = `
"Date: 2026-03-15
### NICHE: physiotherapy

### CONTENT PILLARS & DISTRIBUTION:
Content pillars with weighted distribution:
- "Education" (60%): generate 1 topic(s)
- "Promotion" (40%): generate 2 topic(s)

### EXCLUSION LIST:

RECENTLY COVERED TOPICS (do NOT suggest these or closely related themes — find fresh angles the client has NOT posted about yet):
- A post about shin splints

DO NOT use these source URLs — already used in previous posts:
- https://example.com/already-used


### SOURCE MATERIAL (use for grounding):






### SOURCING RULES:
- Every topic MUST be grounded in the provided source material. Never use your own knowledge.
- If a source item has a pillar tag in brackets (e.g. [Pillar A, Pillar B]), only use it for the named pillars. Untagged items are available to all pillars.
- RSS items → source_type "rss", source_url = item link.
- Website pages → source_type "website", source_url = page URL.
- Documents → source_type "file", source_url = null.
- Web search → source_type "web_search", source_url = result URL.
- Top performing posts → source_type "performance", source_url = the post's permalink or null.
- Prefer source items tied to seasonal moments, holidays, or occasions relevant to this niche and the English market in the next 4-6 weeks — but ONLY when the source material itself supports the topic; never invent seasonal content without a source.
- If a pillar has no available source items, omit that pillar entirely — do NOT fabricate.
- Never return a topic with source_url null unless source_type is "file" or "performance".
- Maximize source diversity: use each available source URL at least once before reusing any URL for a second topic. Each topic from the same URL must cover a genuinely different angle.
- source_excerpt MUST only contain information that is explicitly present in the source material. Do NOT add facts, mechanisms, claims, or details from your own knowledge — even if they are technically correct. If the source doesn't mention something, it must not appear in the excerpt.

### TASK: Identify up to 3 unique post themes. Return only topics grounded in the provided source material — fewer than 3 is acceptable if sources don't fully cover all pillars.
[{
  "finding": "one sentence: why this theme, what specific fact justifies it",
  "suggested_theme": "5-10 words summary about the theme in English, use proper grammer",
  "pillar": "pillar name",
  "source_url": "url or null",
  "source_title": "title or null",
  "source_type": "rss | website | file | web_search | performance | null",
  "source_excerpt": "Write in English. 5-8 sentences extracting the key facts from the source. Each sentence must correspond to a specific passage in the source — do not infer, interpret, or connect facts that the source does not explicitly connect. Include only facts, claims, and details that are explicitly stated — do NOT add information from your own knowledge, even if technically correct. For technical or medical terms, use the established term in English. If no established term exists, keep the original English term — do NOT create hybrid transliterations mixing Latin and Cyrillic characters. Replace all double-quotes with single-quotes."
}]"
`;
